Fix avatar image in side doc not showing.

--- a/theme/common.less
+++ b/theme/common.less
@@ -678,7 +678,7 @@ Avatar
     position: relative;
 }
 
-#root .avatar .message {
+#docs .avatar .message {
     margin-left: 4em;
     margin-bottom: 1em;
 }
